--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/xr": "^5.7.1",
     "@types/three": "0.152.1",
     "playroomkit": "^0.0.68",
+    "r3f-vite-starter": "file:",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "0.153.0"
