refactor: Update package.json and components for wordList functionality
Update package.json to use the latest version of playroomkit. Add wordList state variable and setWordList setter function to useGameEngine.jsx. In ViewerScreen.jsx, add input field and button to set word and update wordList. Display wordList in StreamScreen.jsx. Add button to set up game in HostScreen.jsx. These changes improve functionality and user experience.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@types/three": "0.152.1",
+    "canvas-confetti": "^1.9.3",
+    "framer-motion": "^11.11.9",
+    "lucide-react": "^0.453.0",
     "playroomkit": "^0.0.82",
     "r3f-vite-starter": "file:",
     "react": "^18.2.0",
